--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -3,6 +3,10 @@
 {% block content %}
 
 <!-- index.html content starts here -->
+{% for event in event_list %}
+<a href="{% url 'event_detail' event.event_id %}">
+    <h2>{{ event.event_name }}</h2>
+</a>
 <div class="container-fluid">
     <div class="row">
 
@@ -53,6 +57,8 @@
 </div>
 
 <!-- index.html content ends here -->
+{% endfor %}
+
 {% endblock %}
 
 {% block copyright %}
