--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -3,10 +3,6 @@
 {% block content %}
 
 <!-- index.html content starts here -->
-{% for event in event_list %}
-<a href="{% url 'event_detail' event.event_id %}">
-    <h2>{{ event.event_name }}</h2>
-</a>
 <div class="container-fluid">
     <div class="row">
 
@@ -22,7 +18,7 @@
                                     <p class="author">Author: {{ post.author }}</p>
                                 </div>
                             </div>
-                            <a href="{% url 'post_detail' post.slug %}" class="post-link">
+                            <a href="#" class="post-link">
                                 <h2 class="card-title">{{ post.title }}</h2>
                                 <p class="card-text ">{{post.excerpt}}</p>
                             </a>
@@ -57,10 +53,8 @@
 </div>
 
 <!-- index.html content ends here -->
-{% endfor %}
-
 {% endblock %}
 
 {% block copyright %}
-Copyright 2023 Matt Rudge
+    Copyright 2023 Matt Rudge
 {% endblock %}
