--- a/about/templates/about/about_starter.html
+++ b/about/templates/about/about_starter.html
@@ -4,20 +4,18 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-4 text-center">
-            <img src="{% static 'images/nobody.jpg' %}" width="75%">
+            <img src="{% static 'images/nobody.jpg' %}" width="75%" alt="image">
         </div>
         <div class="col-8">
             <!-- Title goes between these h2 tags -->
-            <h2>{{ about.title }}</h2>
+            <h2></h2>
             <!-- Content goes directly underneath this -->
-            {{ about.content | safe }}
         </div>
     </div>
     <div class="row">
         <div class="col text-right">
             <!-- Updated on field goes in here -->
-
-            <p class="text-end"><em>Updated on: {{ about.updated_on }}</em></p>
+            <p class="text-end"><em>Updated on: </em></p>
         </div>
     </div>
 </div>
