--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
-
 {% block content %}
 
 <!-- index.html content starts here -->
@@ -27,10 +26,10 @@
                             </div>
                             <a href="{% url 'post_detail' post.slug %}" class="post-link">
                                 <h2 class="card-title">{{ post.title }}</h2>
-                                <p class="card-text ">{{post.excerpt}}</p>
+                                <p class="card-text">{{ post.excerpt }}</p>
                             </a>
 
-                            <hr>
+                            <hr />
                             <p class="card-text text-muted h6">{{ post.created_on}}
                             </p>
                         </div>
@@ -61,7 +60,4 @@
 
 <!-- index.html content ends here -->
 {% endblock %}
-
-{% block copyright %}
-Copyright 2023 Matt Rudge
-{% endblock %}
+{% block copyright %}Copyright 2023 Matt Rudge{% endblock %}
